# arboretum

./: CMakeLists.txt  README.md
Arboretum/: CMakeLists.txt
Arboretum/Maths/: Matrix.cpp  Matrix.h
Arboretum/SubstitutionModels/: DNAModels.h  F81.h  F84.h  GTR.cpp  GTR.h  HKY85.h  K80.h  SubstitutionModels.h  TN93.h
Arboretum/include/: Arboretum.h  Hello.h
Arboretum/include/SubstitutionModels/: K80.h  SubstitutionModels.h
Arboretum/src/: Hello.cpp
Arboretum/test/: main.cpp
TestApp/: CMakeLists.txt
TestApp/src/: main.cpp
